Basic minimal changes to get a working build 4 years later.